RELEASE v0.05 - first working version of the new radi
    CHANGES:
    - introduced dictionary functionality. The tool is capable of reading
      the free radius dictionaries and use the data to determine
      the correct type/value for the given AVP name.
    - most of the functionality was moved to a libradi library, so that
      it will be easy to use the functionality in other projects

    TODO:
    - Implement the missing types (eg. ipv6prefix)
    - Add unit tests for EVERYTHING
    - polish & refactor